fix border overflow

--- a/personal-site/src/components/Marquee/_marque.module.scss
+++ b/personal-site/src/components/Marquee/_marque.module.scss
@@ -1,48 +1,7 @@
-
 .marquee {
-	width: 400px;
-	margin: 0 auto;
+	width: 50%;
 	white-space: nowrap;
-	overflow: hidden;
-	box-sizing: border-box;
-}
-
-.marquee span {
-	display: inline-block;
-	padding-left: 100%;
-	will-change: transform;
-	// margin-left: 4em;
-	/* show the marquee just outside the paragraph */
-	animation: marquee 15s linear infinite;
-}
-
-.marquee span:hover {
-	animation-play-state: paused
-}
-
-
-  /* Make it move */
-
-@keyframes marquee {
-	0% {
-	transform: translate(0, 0);
-	}
-	100% {
-	transform: translate(-100%, 0);
-}
-}
-
-
-  /* Respect user preferences about animations */
-
-@media (prefers-reduced-motion: reduce) {
-	.marquee {
-	white-space: normal
-	}
-	.marquee span {
-	animation: none;
-	padding-left: 0;
-	}
+    margin: 0 auto;
 }
 
 i {
